Dandome duro con el register

--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -14,7 +14,24 @@
                 <img src="../../../public/images/Logo/Logo.png" alt="Logo">
                 <h2>Bienvenido a Drinkers</h2>
             </div>
-            
+            <form class="Form-register">
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre">Nombre</label>
+                        <input type="text" id="Nombre" placeholder="Ingrese su nombre">
+                        <label for="Nombre">
+                            <img src="../../../public/images/icons/person.png" id="Nombre" alt="Logo">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="Apellido">Apellido</label>
+                        <input type="text" id="Apellido" placeholder="Ingrese su apellido">
+                        <label for="Apellido">
+                            <img src="../../../public/images/icons/person.png" id="Apellido" alt="Logo">
+                        </label>
+                    </div>
+                </div>
+            </form>
         </div>
     </header>
 </body>
