--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -27,7 +27,22 @@
                         <label for="Apellido">Apellido</label>
                         <input type="text" id="Apellido" placeholder="Ingrese su apellido">
                         <label for="Apellido">
-                            <img src="../../../public/images/icons/person.png" id="Apellido" alt="Logo">
+                            <img src="../../../public/images/icons/Pencil--white.png" id="Apellido" alt="Logo">
+                        </label>
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Correo">Correo</label>
+                        <input type="email" id="Correo" placeholder="Ingrese su correo">
+                        <label for="Correo">
+                            <img src="../../../public/images/icons/mail.png" id="Correo" alt="Logo">
+                    </div>
+                    <div>
+                        <label for="Password">Contraseña</label>
+                        <input type="password" id="Password" placeholder="Ingrese su contraseña">
+                        <label for="Password">
+                            <img src="../../../public/images/icons/lock.png" id="Password" alt="Logo">
                         </label>
                     </div>
                 </div>
