--- a/src/layouts/Register/estilo.css
+++ b/src/layouts/Register/estilo.css
@@ -54,7 +54,8 @@ header .Content .Login__Title h2{
 }
 header .Content .Form-register{
     display: flex;
-    justify-content: center;
+    flex-flow: column wrap;
+    align-items: center;
     width: 590px;
     height: 320px;
     padding: 5px;
@@ -62,6 +63,7 @@ header .Content .Form-register{
 header .Content .Form-register .Input--Container{
     padding-left: 40px;
 }
+
 header .Content .Form-register .Input--Container div{
     display: flex;
     gap: 5px;
@@ -85,7 +87,7 @@ header .Content .Form-register .Input--Container div input{
     border-bottom: 1px solid var(--PrimaryColor);
     border-right: 1px solid var(--PrimaryColor);
     border-radius: 5px;
-    transition: .1s linear;
+    color: #fff;
 }
 header .Content .Form-register .Input--Container div input::placeholder{
     color: var(--PrimaryColor);
