--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -36,15 +36,38 @@
                         <label for="Correo">Correo</label>
                         <input type="email" id="Correo" placeholder="Ingrese su correo">
                         <label for="Correo">
-                            <img src="../../../public/images/icons/mail.png" id="Correo" alt="Logo">
+                            <img src="../../../public/images/icons/mail.png" alt="Logo">
                     </div>
                     <div>
                         <label for="Password">Contraseña</label>
                         <input type="password" id="Password" placeholder="Ingrese su contraseña">
                         <label for="Password">
-                            <img src="../../../public/images/icons/lock.png" id="Password" alt="Logo">
+                            <img src="../../../public/images/icons/lock.png" alt="Logo">
                         </label>
                     </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nacimiento">F.Nacimiento</label>
+                        <input type="date" id="Fecha">
+                    </div>
+                    <div>
+                        <label for="Direccion">Direccion</label>
+                        <input type="text" id="Direccion" placeholder="Estado,Ciudad,Ubicación">
+                        <label for="Direccion">
+                            <img src="../../../public/images/icons/Envios.svg" alt="Logo">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="Username">Username</label>
+                        <input type="text" id="Username" placeholder="Ingrese su username">
+                        <label for="Username">
+                            <img src="../../../public/images/icons/person.png"  alt="Logo">
+                    </div>
+                </div>
+                <div class="Buttons">
+                    <input class="Submit--From" value="Ingresar">
+                    <input class="Submit--From" value="Crear Cuenta" id="Crear">
                 </div>
             </form>
         </div>
