Arreglos en js del register y las modificaciones en la pagina como tal

--- a/src/layouts/Register/Index.html
+++ b/src/layouts/Register/Index.html
@@ -49,7 +49,7 @@
                 <div class="Input--Container">
                     <div>
                         <label for="Nacimiento">F.Nacimiento</label>
-                        <input type="date" id="Fecha">
+                        <input type="date" id="Nacimiento">
                     </div>
                     <div>
                         <label for="Direccion">Direccion</label>
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <input class="Submit--From" value="Ingresar">
-                    <input class="Submit--From" value="Crear Cuenta" id="Crear">
+                    <input class="Submit--From" value="crear" id ="Cuenta">
+                    <input class="Submit--From" value="Volver al menu" id="Volver_menu">
                 </div>
             </form>
         </div>
