--- a/public/css/auth/register.css
+++ b/public/css/auth/register.css
@@ -1,4 +1,11 @@
 
+
+:root{
+    --PrimaryColor: #FFFFFF;
+    --SecondaryColor: #001752;
+    --ColorNavigatorBar: #232326;
+    --HoverColor: #B1CEF4;
+}
 *{
     font-family: sans-serif;
     margin: 0%;
@@ -8,7 +15,7 @@
 header{
     width: 100%;
     height: 100vh;
-    background: url(/images/Logo/Fondo.png) no-repeat;
+    background: url(../../../public/images/Logo/Fondo.png) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -16,7 +23,7 @@ header{
     align-items: center;
 }
 header .Content{
-    width: 350px;
+    width: 620px;
     height: 540px;
     padding: 10px;
     border: 2px solid #000;
@@ -24,6 +31,7 @@ header .Content{
     box-shadow: 0 0 20px #000;
     border-radius: 15px;
     display: flex;
+    align-items: center;
     flex-flow: column wrap;
 }
 header .Content .Login__Title{
@@ -45,60 +53,77 @@ header .Content .Login__Title h2{
     font-weight: 500;
     color: #F8F7F2;
 }
-header .Content .Form__page{
-    display: flex;
-    margin: auto;
-    margin-top: 10px;
-    flex-flow: column wrap;
-    padding: 5px;
-}
-header .Content .Form__page .Input--container{
-    font-size: 14px;
-    position: relative;
+header .Content .Form-register{
+    
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    width: 590px;
+    height: 390px;
+    
 }
-header .Content .Form__page .Input--container label{
-    display: block;
-    margin: 2px;
-    padding-left: 10px;
-    font-size: 0.9em;
-    letter-spacing: 2px;
-    color: #ffffff;
+header .Content .Form-register .Input--Container{
+    padding-left: 40px;
+}
+
+header .Content .Form-register .Input--Container div{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin: 3px;
+}
+header .Content .Form-register .Input--Container div label{
+    color: var(--PrimaryColor);
+    font-size: 1.1em;
+    letter-spacing: 0.5px;
     text-shadow: 2px 0 5px #000;
 }
-header .Content .Form__page .Input--container .Container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-header .Content .Form__page .Input--container .Container input{
-    padding: 5px 10px;
-    margin: 2px;
-    width: 300px;
+header .Content .Form-register .Input--Container div input{
+    width: 350px;
+    height: auto;
+    padding: 6px 5px;
     border: none;
     outline: none;
+    font-size: 1.1em;
     background-color: transparent;
-    border-bottom: 1px solid #fff;
-    border-right: 1px solid #fff;
+    border-bottom: 1px solid var(--PrimaryColor);
+    border-right: 1px solid var(--PrimaryColor);
     border-radius: 5px;
     color: #fff;
-    font-size: 1.1em;
+    transition: .1s linear;
 }
-header .Content .Form__page .Input--container .Container input::placeholder{
-    color: #fff;
+#Correo{
+    width: 365px;
 }
-header .Content .Form__page .Input--container .Container img{
+#Password{
+    width: 325px;
+}
+#Fecha{
+    width: 322px;
+}
+#Username{
+    width: 345px;
+}
+header .Content .Form-register .Input--Container div input:hover{
+    border-bottom: 2px solid var(--SecondaryColor);
+    border-right: 2px solid var(--SecondaryColor);
+    border-radius: 10px;
+}
+header .Content .Form-register .Input--Container div input::placeholder{
+    color: var(--PrimaryColor);
+}
+header .Content .Form-register .Input--Container div img{
     width: 26px;
     position: relative;
-    left: -40px;
+    left: -45px;
 }
 header .Content .Buttons{
-    margin: auto;
+    display: flex;
+    flex-direction: column;
     position: relative;
     left: 5px;
-    top: 10px;
+    margin-top: 10px;
 }
 header .Content .Buttons .Submit--From{
     width: 300px;
