--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -10,41 +10,63 @@
     <header>
         <div class="Content">
             <div class="Login__Title">
-                <img src="/images/Logo/Logo.png" alt="Logo">
+                <img src="../../../public/images/Logo/Logo.png" alt="Logo">
                 <h2>Bienvenido a Drinkers</h2>
             </div>
-            <form class="Form__page">
-                <div class="Input--container">
-                    <label for="Nombre">Nombre</label>
-                    <div class="Container">
-                        <input type="text"  placeholder="Ingrese su Nombre" required id="Nombre">
-                        <img src="/images/icons/Pencil--white.png" alt="Nombre">
+            <form class="Form-register">
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre">Nombre</label>
+                        <input type="text" id="Nombre" placeholder="Ingrese su nombre">
+                        <label for="Nombre">
+                            <img src="../../../public/images/icons/person.png" id="Nombre" alt="Logo">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="Apellido">Apellido</label>
+                        <input type="text" id="Apellido" placeholder="Ingrese su apellido">
+                        <label for="Apellido">
+                            <img src="../../../public/images/icons/Pencil--white.png" id="Apellido" alt="Logo">
+                        </label>
                     </div>
                 </div>
-                <div class="Input--container">
-                    <label for="Apellido">Apellido</label>
-                    <div class="Container">
-                        <input type="text"  placeholder="Ingrese su Apellido" required id="Apellido">
-                        <img src="/images/icons/Pencil--white.png" alt="Nombre">
+                <div class="Input--Container">
+                    <div>
+                        <label for="Correo">Correo</label>
+                        <input type="email" id="Correo" placeholder="Ingrese su correo">
+                        <label for="Correo">
+                            <img src="../../../public/images/icons/mail.png" alt="Logo">
+                    </div>
+                    <div>
+                        <label for="Password">Contraseña</label>
+                        <input type="password" id="Password" placeholder="Ingrese su contraseña">
+                        <label for="Password">
+                            <img src="../../../public/images/icons/lock.png" alt="Logo">
+                        </label>
                     </div>
                 </div>
-                <div class="Input--container">
-                    <label for="Email">Email</label>
-                    <div class="Container">
-                        <input type="email"  placeholder="Ingrese su correo" required id="Correo">
-                        <img src="/images/icons/person.png" alt="Nombre">
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nacimiento">F.Nacimiento</label>
+                        <input type="date" id="Nacimiento">
                     </div>
-                </div>
-                <div class="Input--container">
-                    <label for="password">Contraseña</label>
-                    <div class="Container">
-                        <input type="password"  placeholder="Ingrese su correo" required id="Password" required maxlength="8">
-                        <img src="/images/icons/lock.png" alt="Nombre">
+                    <div>
+                        <label for="Direccion">Direccion</label>
+                        <input type="text" id="Direccion" placeholder="Estado,Ciudad,Ubicación">
+                        <label for="Direccion">
+                            <img src="../../../public/images/icons/Envios.svg" alt="Logo">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="Username">Username</label>
+                        <input type="text" id="Username" placeholder="Ingrese su username">
+                        <label for="Username">
+                            <img src="../../../public/images/icons/person.png"  alt="Logo">
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a id="link"><input type="submit" class="Submit--From"  value="Crear Cuenta"></a>
-                    <a href="/"><input class="Submit--From inicio" value="Volver al inicio"></a>
+                    <input class="Submit--From" value="crear" id ="Cuenta">
+                    <input class="Submit--From" value="Volver al menu" id="Volver_menu">
                 </div>
             </form>
         </div>
