--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -136,19 +136,19 @@
 
     <main>
         <section class="arrows">
-            <div class="arrow selected">
+            <div id="first-arrow" class="arrow selected">
                 <h3>Paso 1</h3>
                 <p>Dirección de envío</p>
             </div>
-            <div class="arrow">
+            <div id="second-arrow" class="arrow">
                 <h3>Paso 2</h3>
                 <p>Tipo de envío</p>
             </div>
-            <div class="arrow">
+            <div id="third-step" class="arrow">
                 <h3>Paso 3</h3>
                 <p>Facturación</p>
             </div>
-            <div class="arrow">
+            <div id="fourth-arrow" class="arrow">
                 <h3>Paso 4</h3>
                 <p>Registra tu pago</p>
             </div>
@@ -171,75 +171,21 @@
                 <p style="grid-row: 2/2; grid-column: 1/5; margin-left: 3vmin;">Carabobo • Naguanagua • Los Guayabitos</p>
                 <p style="grid-row: 3/3; grid-column: 1/5; margin-left: 3vmin;">Residencias el Saman, edif azul con blanco, porton negro, justo al frente del restaurante club guayabal</p>
                 <p style="grid-row: 4/4; grid-column: 1/4; color: red; margin-left: 3vmin;">Sin geolocalización incluida</p>
-                <button class="button-siguiente" style="grid-row: 4/4; grid-column: 5/5; margin-left: 3vmin;">Siguiente</button>
+                <button id="button-step1" class="button-siguiente" style="grid-row: 4/4; grid-column: 5/5; margin-left: 3vmin;">Siguiente</button>
             </div>
         </section>
 
         <section class="second-step">
-            <div style="grid-row: 1/3; grid-column: 1/2; align-content: center; text-align: center;" class="subcontainer2 selected-date">
-                <img src="../../../../public/images/icons/checkfill.svg" style="height: 2vmin; width: 2vmin;">
-                Hoy<br>
-                19 Sep
+            <div class="date-view">
+                <h2 id="day">13</h2>
+                <h5 id="month-year">Noviembre, 2024</h5>
             </div>
-            <div style="grid-row: 1/3; grid-column: 2/3; text-align: center; align-content: center;" class="subcontainer2 unselected-date">
-                <img src="../../../../public/images/icons/checkunfill.svg" style="height: 2vmin; width: 2vmin;">
-                Vie<br>
-                20 Sep
-            </div>
-            <div style="grid-row: 1/3; grid-column: 3/4; align-content: center; text-align: center;" class="subcontainer2 unselected-date">
-                <img src="../../../../public/images/icons/checkunfill.svg" style="height: 2vmin; width: 2vmin;">
-                Sab<br>
-                21 Sep
-            </div>
-            <div style="grid-row: 1/3; grid-column: 4/6; align-content: center; text-align: center;" class="subcontainer2 unselected-date">
-                Planificado
-            </div>
-
-            <div style="grid-row: 3/9; grid-column: 1/11;" class="dates-container">
-                <div class="subcontainer-dates time-subcontainer selected-time">
-                    <img src="../../../../public/images/icons/checkfill blue.svg" style="height: 5vmin; width: 5vmin; margin-left: 3vmin;">
-                    <section style="width: 50vmin;">
-                        Gratis (3 horas)<br>
-                        0.00$<br>
-                        Tu pedido sera enviado en 3hrs aprox.
-                    </section>
-                    <section style="margin-right: 3vmin;">
-                        Total de envio<br>
-                        0,00bs
-                    </section>
-                </div>
-                <div class="subcontainer-dates time-subcontainer unselected-time">
-                    <img src="../../../../public/images/icons/checkunfill.svg" style="height: 5vmin; width: 5vmin; margin-left: 3vmin;">
-                    <section style="width: 50vmin;">
-                        Express (60min)<br>
-                        3.99$<br>
-                        Tu pedido llegará en 60min aprox
-                    </section>
-                    <section style="margin-right: 3vmin;">
-                        Total de envio<br>
-                        0,00bs
-                    </section>
-                </div>
-            </div>
-            
-
-            <div style="grid-row: 9/10; grid-column: 1/3;" class="subcontainer2 schedule-subcontainer">8:00AM a 10:00AM</div>
-            <div style="grid-row: 9/10; grid-column: 3/5;" class="subcontainer2 schedule-subcontainer">10:00AM a 12:00AM</div>
-            <div style="grid-row: 9/10; grid-column: 5/7;" class="subcontainer2 schedule-subcontainer">12:00PM a 2:00PM</div>
-            <div style="grid-row: 9/10; grid-column: 7/9;" class="subcontainer2 schedule-subcontainer">2:00PM a 4:00PM</div>
-            <div style="grid-row: 9/10; grid-column: 9/11;" class="subcontainer2 schedule-subcontainer">4:00PM a 6:00PM</div>
-
-            <p style="grid-row: 10/11; grid-column: 1/11; margin: 0; font-size: smaller; color: red;">Debe seleccionar un horario para la entrega</p>
-            <p style="grid-row: 14/15; grid-column: 1/11; margin: 0;">Seleccione una propina</p>
-
-            <div style="grid-row: 15/16; grid-column: 1/2;" class="subcontainer2 tip-container">0.00$</div>
-            <div style="grid-row: 15/16; grid-column: 2/3;" class="subcontainer2 tip-container">1.00$</div>
-            <div style="grid-row: 15/16; grid-column: 3/4;" class="subcontainer2 tip-container">2.00$</div>
-            <div style="grid-row: 15/16; grid-column: 4/5;" class="subcontainer2 tip-container">5.00$</div>
-            <div style="grid-row: 15/16; grid-column: 5/6;" class="subcontainer2 tip-container">10.00$</div>
-
-            <input placeholder="Propina Personalizada ($)" style="grid-column: 1/5; grid-row: 16/17" type="number" class="number-input">
-            <p style="grid-column: 5/11; grid-row: 16/17; margin: 0;">Propina Equivalente en Bs: 0,00 Bs</p>
+            <label for="date-delivery" style="grid-column: 5/8; grid-row: 1/2; align-self: end;">Escoge fecha y hora de la entrega</label>
+            <input id="date-delivery" type="datetime-local" style="grid-column: 5/7; grid-row: 2/3;">
+            <label for="propina" style="grid-column: 5/8; grid-row: 4/5; align-self: end;">Deja tu propina ($)</label>
+            <input id="propina" value="0" class="number-input" type="number" style="grid-column: 5/7; grid-row: 5/6;">
+            <span style="grid-column: 7/8; grid-row: 5/6; align-self: center;">$</span>
+            <button style="grid-column: 5/6; grid-row: 8/9">Continuar</button>
         </section>
 
         <section class="third-step">
