--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -185,7 +185,7 @@
             <label for="propina" style="grid-column: 5/8; grid-row: 4/5; align-self: end;">Deja tu propina ($)</label>
             <input id="propina" value="0" class="number-input" type="number" style="grid-column: 5/7; grid-row: 5/6;">
             <span style="grid-column: 7/8; grid-row: 5/6; align-self: center;">$</span>
-            <button style="grid-column: 5/6; grid-row: 8/9">Continuar</button>
+            <button id="button-step2" style="grid-column: 5/6; grid-row: 8/9">Continuar</button>
         </section>
 
         <section class="third-step">
@@ -200,36 +200,45 @@
                 <input placeholder="Teléfono" style="grid-column: 7/9; grid-row: 1/2;">
                 <textarea placeholder="Dirección" style="grid-column: 1/9; grid-row: 2/4;"></textarea>
                 <textarea placeholder="Requerimientos extras" style="grid-column: 1/9; grid-row: 4/6;"></textarea>
-                <button style="grid-column: 6/7; grid-column: 8/9;">Aceptar</button>
+                <button id="button-step3" style="grid-column: 6/7; grid-column: 8/9;">Aceptar</button>
             </form>
         </section>
 
         <section class="fourth-step">
-            <div style="grid-row: 1/3; grid-column: 1/5;" class="subcontainer subcontainer3-selected">
+            <div id="paymode-selected" style="display: none; grid-row: 1/3; grid-column: 1/5;" class="subcontainer paymode">
                 <img class="check" src="../../../../public/images/icons/checkfill.svg">
                 <h3 class="container-title">Pago Único</h3>
                 <p class="container-content">Seleccione esta opcion si tu pago es por un solo metodo</p>
             </div>
-            <div style="grid-row: 1/3; grid-column: 5/9;" class="subcontainer">
+            <div style="display: none; grid-row: 1/3; grid-column: 5/9;" class="subcontainer paymode">
                 <img class="check" src="../../../../public/images/icons/checkunfill.svg">
                 <h3 class="container-title">Multipagos</h3>
                 <p class="container-content">Seleccione esta opcion si son varios metodos de pago</p>
             </div>
 
-            <div style="grid-row: 3/4; grid-column: 1/9; display: flex; align-items: center; justify-content: center; gap: 5vmin;" class="subcontainer3"><b>Total a pagar</b> 507,25bs / 13.79$</div>
+            <div style="cursor: default; grid-row: 3/4; grid-column: 1/9; display: flex; align-items: center; justify-content: center; gap: 5vmin;" class="subcontainer3"><b>Total a pagar</b> 507,25bs / 13.79$</div>
 
-            <div style="grid-row: 4/5; grid-column: 1/3;" class="subcontainer3">Tarjeta</div>
-            <div style="grid-row: 4/5; grid-column: 3/5;" class="subcontainer3">Efectivo</div>
-            <div style="grid-row: 4/5; grid-column: 5/7;" class="subcontainer3">Punto de Venta</div>
-            <div style="grid-row: 4/5; grid-column: 7/9;" class="subcontainer3">Pago Movil</div>
+            <div id="selectedtype" style="grid-row: 4/5; grid-column: 1/3;" class="subcontainer3 paytype selected-container">Tarjeta</div>
+            <div style="grid-row: 4/5; grid-column: 3/5;" class="subcontainer3 paytype">Efectivo</div>
+            <div style="grid-row: 4/5; grid-column: 5/7;" class="subcontainer3 paytype">Punto de Venta</div>
+            <div style="grid-row: 4/5; grid-column: 7/9;" class="subcontainer3 paytype">Pago Movil</div>
 
-            <div id="tarjeta" style="display: flex; gap: 1vmin;">
-                <input type="number" placeholder="Número de Tarjeta" class="number-input inputs">
-                <input type="date" class="inputs">
-                <input type="password" placeholder="Codigo de Seguridad" class="inputs">
+            <div id="tarjeta" style="grid-row: 5/7; grid-column: 1/9; display: flex; flex-direction: column; justify-content: center;">
+                <div style="display: flex; gap: 1vmin;">
+                    <input type="number" placeholder="Número de Tarjeta" class="number-input inputs">
+                    <input type="date" class="inputs">
+                    <input type="password" placeholder="Codigo de Seguridad" class="inputs">
+                </div>
+
+                <div style="display: flex; margin-top: 1vmin;">
+                    <img src="../../../../public/images/icons/visa.svg" alt="">
+                    <img src="../../../../public/images/icons/mastercard.svg" alt="">
+                    <img src="../../../../public/images/icons/maestro.svg" alt="">
+                    <img src="../../../../public/images/icons/americanexpress.svg" alt="">
+                </div>
             </div>
 
-            <div id="pagomovil" style="display: none; gap: 1vmin;">
+            <div id="pagomovil" style="display: none; gap: 1vmin; grid-row: 5/7; grid-column: 1/9; align-items: center;">
                 <select name="bancos" id="bancos" class="inputs">
                     <option value="banesco">Banesco</option>
                     <option value="mercantil">Banco Mercantil</option>
@@ -258,10 +267,7 @@
                 <input type="number" placeholder="Referencia" class="number-input">
             </div>
 
-            <img style="grid-row: 6/7; grid-column: 1/2;" src="../../../../public/images/icons/visa.svg" alt="">
-            <img style="grid-row: 6/7; grid-column: 2/3;" src="../../../../public/images/icons/mastercard.svg" alt="">
-            <img style="grid-row: 6/7; grid-column: 3/4;" src="../../../../public/images/icons/maestro.svg" alt="">
-            <img style="grid-row: 6/7; grid-column: 4/5;" src="../../../../public/images/icons/americanexpress.svg" alt="">
+            <button id="button-step4" style="grid-row: 7/8; grid-column: 7/9;">Finalizar Compra</button>
         </section>
     </main>
 
