--- a/src/layouts/Landing/pay/index.html
+++ b/src/layouts/Landing/pay/index.html
@@ -136,7 +136,7 @@
 
     <main>
         <section class="arrows">
-            <div id="first-arrow" class="arrow selected">
+            <div id="first-arrow" class="arrow selectedarrow">
                 <h3>Paso 1</h3>
                 <p>Dirección de envío</p>
             </div>
@@ -144,7 +144,7 @@
                 <h3>Paso 2</h3>
                 <p>Tipo de envío</p>
             </div>
-            <div id="third-step" class="arrow">
+            <div id="third-arrow" class="arrow">
                 <h3>Paso 3</h3>
                 <p>Facturación</p>
             </div>
@@ -154,7 +154,7 @@
             </div>
         </section>
 
-        <section class="first-step">
+        <section id="first-step">
             <div class="subcontainer selectMode" id="selected-container">
                 <img class="check" src="../../../../public/images/icons/checkfill.svg">
                 <h3 class="container-title">Delivery</h3>
@@ -171,11 +171,11 @@
                 <p style="grid-row: 2/2; grid-column: 1/5; margin-left: 3vmin;">Carabobo • Naguanagua • Los Guayabitos</p>
                 <p style="grid-row: 3/3; grid-column: 1/5; margin-left: 3vmin;">Residencias el Saman, edif azul con blanco, porton negro, justo al frente del restaurante club guayabal</p>
                 <p style="grid-row: 4/4; grid-column: 1/4; color: red; margin-left: 3vmin;">Sin geolocalización incluida</p>
-                <button id="button-step1" class="button-siguiente" style="grid-row: 4/4; grid-column: 5/5; margin-left: 3vmin;">Siguiente</button>
+                <button onclick=firstButtonClicked() id="button-step1" class="button-siguiente" style="grid-row: 4/4; grid-column: 5/5; margin-left: 3vmin;">Siguiente</button>
             </div>
         </section>
 
-        <section class="second-step">
+        <section id="second-step">
             <div class="date-view">
                 <h2 id="day">13</h2>
                 <h5 id="month-year">Noviembre, 2024</h5>
@@ -185,11 +185,11 @@
             <label for="propina" style="grid-column: 5/8; grid-row: 4/5; align-self: end;">Deja tu propina ($)</label>
             <input id="propina" value="0" class="number-input" type="number" style="grid-column: 5/7; grid-row: 5/6;">
             <span style="grid-column: 7/8; grid-row: 5/6; align-self: center;">$</span>
-            <button id="button-step2" style="grid-column: 5/6; grid-row: 8/9">Continuar</button>
+            <button onclick=secondButtonClicked() id="button-step2" style="grid-column: 5/6; grid-row: 8/9">Continuar</button>
         </section>
 
-        <section class="third-step">
-            <form style="grid-column: 1/9; grid-row: 1/7; display: grid; justify-content: center; grid-template-columns: repeat(8,12.5%); grid-template-rows: repeat(6,16.66%); gap: 1vmin;">
+        <section id="third-step">
+            <div style="grid-column: 1/9; grid-row: 1/7; display: grid; justify-content: center; grid-template-columns: repeat(8,12.5%); grid-template-rows: repeat(6,16.66%); gap: 1vmin;">
                 <input placeholder="Nombre y Apellido" style="grid-column: 1/4; grid-row: 1/2;">
                 <select style="grid-column: 4/5; grid-row: 1/2;">
                     <option value="">V</option>
@@ -200,11 +200,11 @@
                 <input placeholder="Teléfono" style="grid-column: 7/9; grid-row: 1/2;">
                 <textarea placeholder="Dirección" style="grid-column: 1/9; grid-row: 2/4;"></textarea>
                 <textarea placeholder="Requerimientos extras" style="grid-column: 1/9; grid-row: 4/6;"></textarea>
-                <button id="button-step3" style="grid-column: 6/7; grid-column: 8/9;">Aceptar</button>
-            </form>
+                <button onclick=thirdButtonClicked() id="button-step3" style="grid-column: 6/7; grid-column: 8/9;">Aceptar</button>
+            </div>
         </section>
 
-        <section class="fourth-step">
+        <section id="fourth-step">
             <div id="paymode-selected" style="display: none; grid-row: 1/3; grid-column: 1/5;" class="subcontainer paymode">
                 <img class="check" src="../../../../public/images/icons/checkfill.svg">
                 <h3 class="container-title">Pago Único</h3>
@@ -267,7 +267,7 @@
                 <input type="number" placeholder="Referencia" class="number-input">
             </div>
 
-            <button id="button-step4" style="grid-row: 7/8; grid-column: 7/9;">Finalizar Compra</button>
+            <button onclick=fourthButtonClicked() id="button-step4" style="grid-row: 7/8; grid-column: 7/9;">Finalizar Compra</button>
         </section>
     </main>
 
