--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -12,6 +12,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div id="modalBackground">
+        <div id="modalContainer">
+            <img src="../../../../public/images/Logo/Logo.png">
+            <h3>¿Eres mayor de edad?</h3>
+            <div>
+                <button onclick="location.href='https://www.youtube.com/watch?v=XqZsoesa55w'">NO</button>
+                <button onclick=AdultQuestionButton()>SI</button>
+            </div>
+            <p>
+                "Al ingresar a este sitio, confirmas que eres mayor de 18 años y aceptas nuestros <a href="">términos y condiciones.</a>"
+            </p>
+        </div>
+    </div>
+
     <header>
         <section>
             <img src="../../../../public/images/Logo/logo-landing.png">
@@ -299,5 +314,6 @@
         </section>
     </footer>
     <script src="../content.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
