--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -15,8 +15,8 @@
                 <article>
                     <h4>Productos en Inventario</h4>
                     <div>
-                        <span>1220</span>
-                        <button>Ver Detalles
+                        <span><%= inventario.length %></span>
+                        <button onclick="window.location.href='/admin/inventario'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
                     </div>
@@ -24,8 +24,8 @@
                 <article>
                     <h4>Registro de Ventas</h4>
                     <div>
-                        <span>1220</span>
-                        <button>Ver Detalles
+                        <span><%= ventas.length %></span>
+                        <button onclick="window.location.href='/admin/estadistica'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
                     </div>
@@ -33,8 +33,8 @@
                 <article>
                     <h4>Pedidos</h4>
                     <div>
-                        <span>1220</span>
-                        <button>Ver Detalles
+                        <span><%= envios.length %></span>
+                        <button onclick="window.location.href='/admin/envios'">Ver Detalles
                             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M504-480 320-664l56-56 240 240-240 240-56-56 184-184Z"/></svg>
                         </button>
                     </div>
