--- a/public/css/auth/register.css
+++ b/public/css/auth/register.css
@@ -15,7 +15,7 @@
 header{
     width: 100%;
     height: 100vh;
-    background: url(../../../public/images/Logo/Fondo.png) no-repeat;
+    background: url(/images/Logo/Fondo.png) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
