Pago autenticado con JWT del inicio

--- a/src/routes/partials/cart.ejs
+++ b/src/routes/partials/cart.ejs
@@ -12,7 +12,7 @@
             <span id="totalbs-cart">Total(Bs): 0 000.00</span>
         </div>
         <button>
-            <span>Finalizar Compra</span>
+            <span onclick="window.location.href='/payment'">Finalizar Compra</span>
         </button>
     </section>
 </aside>
