--- a/src/routes/user/pay.ejs
+++ b/src/routes/user/pay.ejs
@@ -37,101 +37,11 @@
         </div>
     </section>
 
-    <header>
-        <section>
-            <img src="../../../../public/images/Logo/logo-landing.png">
-            <input type="search">
-            <section>
-                <button>Iniciar sesión</button>
-                <div>0</div>
-                <img id="cart" src="../../../../public/images/icons/store.svg">
-            </section>
-        </section>
-        <nav>
-            <ul>
-                <li><a href=""></a>RON</li>
-                <li><a href=""></a>WHISKY</li>
-                <li><a href=""></a>VINOS</li>
-                <li><a href=""></a>SIDRA</li>
-                <li><a href=""></a>BRANDY</li>
-                <li><a href=""></a>VODKA</li>
-                <li><a href=""></a>SANGRIA</li>
-                <li><a href=""></a>ANIS</li>
-                <li><a href=""></a>AGUARDIENTE</li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('../partials/user-header') %>
 
-    <img id="whatsappIcon" src="../../../../public/images/icons/whatsapp.svg">
+    <%- include('../partials/chat') %>
 
-    <div id="values">
-        <section id="dolars" class="value">$</section>
-        <section id="bs" class="value">bs</section>
-    </div>
-
-    <aside>
-        <button>
-            <img src="../../../../public/images/icons/Trash.svg" alt="">
-            <span>Vaciar Carrito</span>
-        </button>
-        <ul>
-            <li>
-                <input type="number" class="productCant">
-                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
-                <div>
-                    <span>Ron Cacique</span>
-                    <p>10.00$ (10.00$ c/u)</p>
-                </div>
-                <img src="../../../../public/images/icons/Trash.svg">
-            </li>
-            <li>
-                <input type="number" class="productCant">
-                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
-                <div>
-                    <span>Ron Cacique</span>
-                    <p>10.00$ (10.00$ c/u)</p>
-                </div>
-                <img src="../../../../public/images/icons/Trash.svg">
-            </li>
-            <li>
-                <input type="number" class="productCant">
-                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
-                <div>
-                    <span>Ron Cacique</span>
-                    <p>10.00$ (10.00$ c/u)</p>
-                </div>
-                <img src="../../../../public/images/icons/Trash.svg">
-            </li>
-            <li>
-                <input type="number" class="productCant">
-                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
-                <div>
-                    <span>Ron Cacique</span>
-                    <p>10.00$ (10.00$ c/u)</p>
-                </div>
-                <img src="../../../../public/images/icons/Trash.svg">
-            </li>
-            <li>
-                <input type="number" class="productCant">
-                <img class="productImage" src="../../../../public/images/Licores/ron-cacique.jpg">
-                <div>
-                    <span>Ron Caciqfhfghfghfghue</span>
-                    <p>10.00$ (10.00$ c/udfsdfsdfsdfsdfsd)</p>
-                </div>
-                <img src="../../../../public/images/icons/Trash.svg">
-            </li>
-        </ul>
-        <section>
-            <div>
-                <span>Tasa: 00.00</span>
-                <span>Total($):00.00</span>
-                <span>Total(Bs): 0 000.00</span>
-            </div>
-            <button>
-                <span>Finalizar Compra</span>
-            </button>
-        </section>
-    </aside>
+    <%- include('../partials/cart') %>
 
     <main>
         <section class="arrows">
