--- a/src/routes/partials/cart.ejs
+++ b/src/routes/partials/cart.ejs
@@ -15,6 +15,7 @@
             <span onclick="pay()">Finalizar Compra</span>
         </button>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </aside>
 <script>
 
@@ -24,7 +25,11 @@
             window.location.href = '/payment';
         }
         else {
-            alert('No hay productos en el carrito');
+            Swal.fire({
+                title: 'Error!',
+                text: 'No hay productos en el carrito!',
+                icon: 'error',
+            })
         }
     }
 
