--- a/src/routes/partials/cart.ejs
+++ b/src/routes/partials/cart.ejs
@@ -26,7 +26,7 @@
         }
         else {
             Swal.fire({
-                title: 'Error!',
+                title: 'Vacio',
                 text: 'No hay productos en el carrito!',
                 icon: 'error',
             })
