Agregando la distancia entre rutas

--- a/src/routes/partials/user-header.ejs
+++ b/src/routes/partials/user-header.ejs
@@ -9,7 +9,7 @@
             <option value="AnisCartujo">AnisCartujo</option>
             <option value="Cartacho">Cartacho</option>
         </datalist>
-        <input placeholder="Buscar por Nombre..." type="search" list="catalogo" id="search-bar">
+        <input autocomplete="off" placeholder="Buscar por Nombre..." type="search" list="catalogo" id="search-bar">
         <section>
             <img id="user-photo" src="https://picsum.photos/200/300">
             <button id="logButton" onclick="actionButtonLog()">Iniciar sesión</button>
