--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -29,6 +29,10 @@
                             <img src="/images/icons/Pencil--white.png" id="Apellido" alt="Logo">
                         </label>
                     </div>
+                    <div>
+                        <label for="Cedula">Cedula</label>
+                        <input name="cedula" type="number" id="Cedula" placeholder="Ingrese su cedula">
+                    </div>
                 </div>
                 <div class="Input--Container">
                     <div>
