--- a/public/css/auth/register.css
+++ b/public/css/auth/register.css
@@ -24,13 +24,14 @@ header{
 }
 header .Content{
     width: 620px;
-    height: 540px;
+    height: 600px;
     padding: 10px;
     border: 2px solid #000;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 20px #000;
     border-radius: 15px;
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-flow: column wrap;
 }
@@ -56,7 +57,7 @@ header .Content .Login__Title h2{
 header .Content .Form-register{
     
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     align-items: center;
     justify-content: center;
     width: 590px;
